meta info inertia variable

--- a/src/markdown/mas/verzameling_verklarende_variabelen.Rmd
+++ b/src/markdown/mas/verzameling_verklarende_variabelen.Rmd
@@ -212,7 +212,7 @@ Daarna gebruiken we de `add_bo_to_frame()` functie om de proporties per telcirke
 ```{r}
 add_bo_by_year <- function(punten_df, path_bo) {
   # Read in bo layer and calculate start and stop year
-  bo_layer <- read_bo(path = bo_file_2022)
+  bo_layer <- read_bo(path = path_bo)
   bo_layer2 <- bo_layer %>% 
     mutate(startjaar = year(START), 
            stopjaar = year(STOP))
@@ -1063,15 +1063,71 @@ n.v.t.
 
 ### Beschrijving
 
-Gewogen gemiddelde van jaar sinds implementatie beheerovereenkomsten per telcirkel.
+Gewogen gemiddelde van jaar sinds implementatie beheerovereenkomsten per telcirkel.  
+  
+-  Geen beheerovereenkomst: 0
+-  Wel beheerovereekomst: Gewogen (oppervlakte beheerovereenkomst) gemiddelde van ...
+   -  1: start beheerovereenkomst in zelfde jaar als telling
+   -  2: start beheerovereenkomst 1 jaar vòòr telling
+   -  3: start beheerovereenkomst 2 jaar vòòr telling
+   -  ...
 
 ### Welk datatype?
 
+Discreet positief. Count data.
+
 ### Waar verzameld?
+
+??
+
+`BO_2022_VLM_EXTERN.shp`
 
 ### Hoe verzameld?
 
+??
+
+`BO_2022_VLM_EXTERN.shp`
+
 ### Hoe berekend?
+
+```{r}
+add_bo_inertia_by_year <- function(punten_df, path_bo) {
+  # Read in bo layer and calculate start and stop year
+  bo_layer <- read_bo(path = path_bo)
+  bo_layer2 <- bo_layer %>% 
+    mutate(startjaar = year(START), 
+           stopjaar = year(STOP))
+  
+  # Loop over years
+  years <- unique(punten_df$jaar)
+  out_list <- vector(mode = "list", length = length(years))
+  
+  for (i in seq_along(years)) {
+    year <- years[i]
+    
+    # Filter by year
+    punten_df_year <- punten_df %>% filter(jaar == year)
+    bo_layer_year <- bo_layer2 %>% 
+      filter(startjaar <= year & stopjaar >= year)
+    
+    out_df_year <- add_bo_to_frame(punten_df = punten_df_year, 
+                                   bo_layer = bo_layer_year)
+    
+    out_list[[i]] <- out_df_year %>% mutate(area_prop_sb = area_prop_sb * 100)
+  }
+  
+  return(do.call(rbind.data.frame, out_list))
+}
+```
+
+```{r}
+# Path to bo file
+bo_file_2022 <- path_to_bo(jaar = 2022)
+
+# Add proportion bo per year
+telpunten_2018_2022_inertia <- add_bo_inertia_by_year(telpunten_2018_2022_df, 
+                                                      bo_file_2022)
+```
 
 ### Visualisatie
 
