--- a/src/markdown/mas/verzameling_verklarende_variabelen.Rmd
+++ b/src/markdown/mas/verzameling_verklarende_variabelen.Rmd
@@ -1091,7 +1091,7 @@ Discreet positief. Count data.
 ### Hoe berekend?
 
 ```{r}
-add_bo_inertia_by_year <- function(punten_df, path_bo) {
+add_bo_inertia <- function(punten_df, path_bo) {
   # Read in bo layer and calculate start and stop year
   bo_layer <- read_bo(path = path_bo)
   bo_layer2 <- bo_layer %>% 
@@ -1110,10 +1110,17 @@ add_bo_inertia_by_year <- function(punten_df, path_bo) {
     bo_layer_year <- bo_layer2 %>% 
       filter(startjaar <= year & stopjaar >= year)
     
-    out_df_year <- add_bo_to_frame(punten_df = punten_df_year, 
-                                   bo_layer = bo_layer_year)
+    out_df_year <- st_intersection(st_buffer(punten_df_year, 300), 
+                                   bo_layer_year) %>%
+      st_drop_geometry() %>%
+      mutate(inertia_row = jaar - startjaar + 1) %>%
+      group_by(pointid) %>%
+      summarise(inertia = mean(inertia_row), .groups = "drop")
     
-    out_list[[i]] <- out_df_year %>% mutate(area_prop_sb = area_prop_sb * 100)
+    out_list[[i]] <- out_df_year %>% 
+      full_join(punten_df_year, by = c("pointid")) %>%
+      replace(is.na(.), 0) %>%
+      mutate(jaar = year)
   }
   
   return(do.call(rbind.data.frame, out_list))
@@ -1125,11 +1132,41 @@ add_bo_inertia_by_year <- function(punten_df, path_bo) {
 bo_file_2022 <- path_to_bo(jaar = 2022)
 
 # Add proportion bo per year
-telpunten_2018_2022_inertia <- add_bo_inertia_by_year(telpunten_2018_2022_df, 
-                                                      bo_file_2022)
+telpunten_2018_2022_inertia <- add_bo_inertia(telpunten_2018_2022_df, 
+                                               bo_file_2022)
 ```
 
 ### Visualisatie
+
+```{r}
+telpunten_2018_2022_inertia %>%
+  ggplot() +
+    geom_histogram(aes(x = inertia), binwidth = 0.25) +
+    labs(
+      title = "Oppervlakte-aandeel soortbeschermingsmaatregelen",
+      x = "Oppervlakte-aandeel (%)",
+      y = "Aantal telpunten") +
+    facet_wrap(~jaar)
+```
+
+```{r}
+telpunten_2018_2022_inertia %>% 
+  st_drop_geometry() %>% 
+  mutate(cat = ifelse(inertia == 0, "0", ">0")) %>% 
+  count(jaar, cat) %>%
+  pivot_wider(names_from = cat, values_from = n)
+```
+
+mismatch
+
+```{r}
+telpunten_2018_2022_bo %>% 
+  st_drop_geometry() %>% 
+  mutate(cat = ifelse(area_prop_sb == 0, "0", ">0")) %>% 
+  count(jaar, cat) %>%
+  pivot_wider(names_from = cat, values_from = n)
+```
+
 
 ### Opmerkingen
 
