--- a/src/markdown/mas/verzameling_verklarende_variabelen.Rmd
+++ b/src/markdown/mas/verzameling_verklarende_variabelen.Rmd
@@ -459,7 +459,7 @@ Voor berekening zie oppervlakte-aandeel hoofdteelten (\@ref(opp-hfdtlt)).
 telpunten_2018_2022_hfdtlt_div1 <- telpunten_2018_2022_hfdtlt_long_tot %>%
   mutate(calc = area_prop * log(area_prop)) %>%
   group_by(pointid, jaar) %>%
-  summarise(shannon_index = -sum(calc), .groups = "drop")
+  summarise(gewas_div_shannon = -sum(calc), .groups = "drop")
 ```
 
 ```{r}
@@ -475,7 +475,7 @@ summary_df <- rbind(summary_df, c(
 ```{r}
 telpunten_2018_2022_hfdtlt_div1 %>%
   ggplot() +
-    geom_histogram(aes(x = shannon_index)) +
+    geom_histogram(aes(x = gewas_div_shannon)) +
     labs(title = "Diversiteit aan hoofdteelten (Shannon)",
          x = "Diversiteit aan hoofdteelten per plot (Shannon index)", 
          y = "Frequentie") +
@@ -483,7 +483,7 @@ telpunten_2018_2022_hfdtlt_div1 %>%
 ```
 
 ```{r}
-aggregate(telpunten_2018_2022_hfdtlt_div1$shannon_index, 
+aggregate(telpunten_2018_2022_hfdtlt_div1$gewas_div_shannon, 
           by = list(telpunten_2018_2022_hfdtlt_div1$jaar), FUN = summary)
 ```
 
@@ -518,7 +518,7 @@ Op basis van dataframe oppervlakte-aandeel hoofdteelten (\@ref(opp-hfdtlt)).
 
 ```{r}
 telpunten_2018_2022_hfdtlt_div2 <- telpunten_2018_2022_hfdtlt_long_tot %>%
-  count(pointid, jaar)
+  count(pointid, jaar, name = "gewas_div_n")
 ```
 
 ### Visualisatie
@@ -526,7 +526,7 @@ telpunten_2018_2022_hfdtlt_div2 <- telpunten_2018_2022_hfdtlt_long_tot %>%
 ```{r}
 telpunten_2018_2022_hfdtlt_div2 %>%
   ggplot() +
-    geom_bar(aes(x = n)) +
+    geom_bar(aes(x = gewas_div_n)) +
     scale_x_continuous(breaks = seq(0, 20, 2),
                        limits = c(0, NA)) +
     labs(title = "Diversiteit aan hoofdteelten (aantal)",
@@ -536,7 +536,7 @@ telpunten_2018_2022_hfdtlt_div2 %>%
 ```
 
 ```{r}
-aggregate(telpunten_2018_2022_hfdtlt_div2$n, 
+aggregate(telpunten_2018_2022_hfdtlt_div2$gewas_div_n, 
           by = list(telpunten_2018_2022_hfdtlt_div2$jaar), FUN = summary)
 ```
 
@@ -1020,8 +1020,8 @@ calc_perceelsgrootte_by_year <- function(punten_df) {
       mutate(area = st_area(geometry)) %>%
       st_drop_geometry() %>%
       group_by(pointid) %>%
-      summarise(median_area = units::drop_units(median(area)),
-                iqr_area = IQR(area),
+      summarise(perceel_median_area = units::drop_units(median(area)),
+                perceel_iqr_area = IQR(area),
                 .groups = "drop")
     
     out_list[[i]] <- out_df_year %>% full_join(punten_df_year)
@@ -1088,28 +1088,28 @@ summary_df <- rbind(summary_df, tibble(
 ```{r}
 telpunten_2018_2022_prcl %>%
   ggplot() +
-    geom_histogram(aes(x = median_area)) +
+    geom_histogram(aes(x = perceel_median_area)) +
     labs(title = "Perceelsgroottes (mediaan)",
          x = "Mediaan perceelsgroottes (m²)",
          y = "Aantal telpunten")
 ```
 
 ```{r}
-aggregate(telpunten_2018_2022_prcl$median_area, 
+aggregate(telpunten_2018_2022_prcl$perceel_median_area, 
           by = list(telpunten_2018_2022_prcl$jaar), FUN = summary)
 ```
 
 ```{r}
 telpunten_2018_2022_prcl %>%
   ggplot() +
-    geom_histogram(aes(x = iqr_area)) +
+    geom_histogram(aes(x = perceel_iqr_area)) +
     labs(title = "Perceelsgroottes (IQR)",
          x = "IQR perceelsgroottes (m²)",
          y = "Aantal telpunten")
 ```
 
 ```{r}
-aggregate(telpunten_2018_2022_prcl$iqr_area, 
+aggregate(telpunten_2018_2022_prcl$perceel_iqr_area, 
           by = list(telpunten_2018_2022_prcl$jaar), FUN = summary)
 ```
 
@@ -1214,7 +1214,7 @@ add_bo_inertia <- function(punten_df, path_bo) {
       filter(BH_DOELST == "soortenbescherming (SB)") %>%
       mutate(inertia_row = jaar - startjaar + 1) %>%
       group_by(pointid) %>%
-      summarise(inertia = mean(inertia_row), .groups = "drop")
+      summarise(inertia_sb = mean(inertia_row), .groups = "drop")
     
     out_list[[i]] <- out_df_year %>% 
       full_join(punten_df_year, by = c("pointid")) %>%
@@ -1248,7 +1248,7 @@ summary_df <- rbind(summary_df, c(
 ```{r}
 telpunten_2018_2022_inertia %>%
   ggplot() +
-    geom_histogram(aes(x = inertia), binwidth = 0.25) +
+    geom_histogram(aes(x = inertia_sb), binwidth = 0.25) +
     labs(
       title = "Oppervlakte-aandeel soortbeschermingsmaatregelen",
       x = "Oppervlakte-aandeel (%)",
@@ -1259,13 +1259,13 @@ telpunten_2018_2022_inertia %>%
 ```{r}
 telpunten_2018_2022_inertia %>% 
   st_drop_geometry() %>% 
-  mutate(cat = ifelse(inertia == 0, "0", ">0")) %>% 
+  mutate(cat = ifelse(inertia_sb == 0, "0", ">0")) %>% 
   count(jaar, cat) %>%
   pivot_wider(names_from = cat, values_from = n)
 ```
 
 ```{r}
-aggregate(telpunten_2018_2022_inertia$inertia, 
+aggregate(telpunten_2018_2022_inertia$inertia_sb, 
           by = list(telpunten_2018_2022_inertia$jaar), FUN = summary)
 ```
 
@@ -1420,11 +1420,55 @@ summary_df <- rbind(summary_df, c(
   bron = "n.v.t."))
 ```
 
-# Samenvatting
+# Samenvatting en uitschrijven data
 
 ```{r}
 summary_df %>%
   kable()
+```
+
+```{r}
+# Variables that vary by year
+variables_df_per_year <- telpunten_2018_2022_bo %>%
+  full_join(telpunten_2018_2022_hfdtlt, by = c("pointid", "jaar")) %>%
+  full_join(telpunten_2018_2022_hfdtlt_div1, by = c("pointid", "jaar")) %>%
+  full_join(telpunten_2018_2022_hfdtlt_div2, by = c("pointid", "jaar")) %>%
+  full_join(telpunten_2018_2022_prcl, by = c("pointid", "regio", "jaar", 
+                                             "geometry")) %>%
+  full_join(telpunten_2018_2022_inertia, by = c("pointid", "regio", "jaar", 
+                                                "geometry")) %>%
+  full_join(expand_grid(jaar = unique(telpunten_2018_2022_df$jaar), 
+                        telperiode = paste0("R", 1:4)), by = "jaar")
+
+# Variables that do not vary by year
+variables_df <- cbind(telpunten_2018_2022_openheid, 
+                      st_coordinates(telpunten_2018_2022_openheid)) %>%
+  full_join(st_drop_geometry(telpunten_2018_2022_sbp), 
+            by = c("pointid", "regio")) %>%
+  full_join(st_drop_geometry(telpunten_2018_2022_kle), 
+            by = c("pointid", "regio")) %>%
+  expand_grid(jaar = unique(telpunten_2018_2022_df$jaar),
+              telperiode = paste0("R", 1:4))
+
+# column names lower case
+names(variables_df_per_year) <- tolower(names(variables_df_per_year))
+names(variables_df) <- tolower(names(variables_df))
+# column names without spaces or commas
+names(variables_df_per_year) <- gsub(",?\\s", "_", names(variables_df_per_year))
+names(variables_df) <- gsub(",?\\s", "_", names(variables_df))
+# no special characters (maïs)
+names(variables_df_per_year) <- iconv(names(variables_df_per_year), 
+                                      from = "UTF-8",to = "ASCII//TRANSLIT")
+names(variables_df) <- iconv(names(variables_df), 
+                             from = "UTF-8", to = "ASCII//TRANSLIT")
+
+# Join everything
+final_variables_df <- variables_df_per_year %>%
+  full_join(variables_df, by = c("pointid", "regio", "jaar", "telperiode", 
+                                 "geometry")) %>%
+  rename(plotnaam = pointid,
+         x_lambert72 = x,
+         y_lambert72 = y)
 ```
 
 # Referenties
