--- a/src/markdown/general/visualisatie_strata_mas.Rmd
+++ b/src/markdown/general/visualisatie_strata_mas.Rmd
@@ -14,6 +14,8 @@ library(terra)
 library(here)
 source(here("src/R/berekening_hulpvariabelen.R"))
 mbag_dir <- here()
+conflicted::conflicts_prefer(dplyr::filter)
+conflicted::conflicts_prefer(dplyr::select)
 ```
 
 # GIS lagen inlezen
