--- a/src/markdown/general/verkenning_macroinvertebraten_map_vmm.Rmd
+++ b/src/markdown/general/verkenning_macroinvertebraten_map_vmm.Rmd
@@ -126,9 +126,9 @@ mapviewdata %>%
 
 # Subset data
 
-- recente data beschikbaar (>= 2015)
-- >= 10 jaar tussen eerste en laatste bemonstering
-- >= 4 bemonsteringen
+- recente data beschikbaar ($\geq$ 2015)
+- $\geq$ 10 jaar tussen eerste en laatste bemonstering
+- $\geq$ 4 bemonsteringen
 
 ```{r}
 mapviewdata %>%
@@ -145,6 +145,14 @@ mapviewdata %>%
          aantal_bemonsteringen >= 4) %>%
   st_drop_geometry() %>%
   select(-recentste_jaar) %>%
-  count(bekken)
+  count(bekken) %>%
+  kable()
 ```
 
+Relevante factoren:
+
+- waterzuiveringsstations (stroomopwaarts)
+- puntvervuilingen (stroomopwaarts)
+- omgevend landgebruik (stroomopwaarts)
+- invasieve exoten
+- 
